# DirichletRD

./: .gitignore  README.md  newSim.py  processes.py  simNew.py  simOld.py  simWhole.py
Template/sim/: CMakeLists.txt
Threadbeast/: newSim.py  runGrid.py  runParallel.py
Threadbeast/sim/: CMakeLists.txt  DRegionksSolver.h  DRegionregion.h  NoDRegionksSolver.h  analysis.h  bez5side.h  bezRectangle.h  centres.h  centres110Original.h  centresAE.h  centresResized.h  collectImagesNoMorph.py  displayCircles.cpp  displaySingleCircle.cpp  driverHex.cpp  driverHexGeometry.cpp  driverksSolver.cpp  flowprocess.cpp  hexGeometry.h  hexTest.h  honda.cpp  ksRegion.h  ksSolver.h  ksSolverEuler.h  ksSolverRK.h  newprocess.cpp  newregion.h  nodisplayCircles.cpp  oldprocess.cpp  oldprocessField.cpp  oldregion.h  originalBez5side.h  pField.cpp  pField.json  process.cpp  process.cpp~  processBessel.cpp  processCircles.cpp  processCollect.cpp  processCosines.cpp  (+33 more)
Threadbeast/sim/Morph/: ksSolver.h
processes/sim/: cartesianprocess.cpp  cartesianprocess.cpp~  centres.txt  check  newoneDomainProcess.cpp  newoneDomainProcess.cpp~  newprocess.cpp  newprocess.cpp~  oldprocess.cpp  oldprocess.cpp~  process.cpp  process.cpp~  voroniProcess.cpp
processes/simSeb/: ermentrout.cpp  rd_2d_erm_fixed.h  rd_2d_erm_fixed.h~
processes/simWhole/: originalprocess.cpp  originalprocess.cpp~  process.cpp  process.cpp~  processHex.cpp  rd_2d_erm.h  rd_2d_erm.h~  test_lambda  test_lambda.cpp  test_lambda.cpp~
